--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" crossorigin src="/kupaa-health/assets/index-[hash].js"></script>
+    <script type="module" crossorigin="" src="/src/main.tsx"></script>
   </body>
 </html>
